--- a/www/index.html
+++ b/www/index.html
@@ -4,14 +4,19 @@
 	<title>Meeting Rainbow</title>
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/flat-ui.css" rel="stylesheet">
+	<link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/base/jquery-ui.css" rel="stylesheet">
+	<link href="/css/jquery.timepicker.css" rel="stylesheet">
 	<link href="/css/styles.css" rel="stylesheet">
+
+	<link href="/meetingrainbow-32x32.ico" rel="icon" type="ico">
+	<link href="/meetingrainbow-16x16.ico" rel="icon" type="ico">
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<div class="span10 offset1">
 				<div style="display:block;height:30px;margin-top:10px;">
-					<div style="float:left;height:28px;width:28px;background-color:#E74C3C;border-radius:10px;overflow:auto;">
+					<div style="float:left;height:28px;width:28px;background-color:#E74C3C;border-radius:10px;overflow:auto;overflow-x:hidden;overflow-y:hidden;">
 					<div style="height:25px;width:25px;background-color:#F39C12;border-radius:10px;position:relative;left:3px;top:3px;">
 					<div style="height:25px;width:25px;background-color:#F1C40F;border-radius:10px;position:relative;left:3px;top:3px;">
 					<div style="height:25px;width:25px;background-color:#2ECC71;border-radius:10px;position:relative;left:3px;top:3px;">
@@ -158,7 +163,7 @@
 							<div class="control-group">
 								<label class="control-label" for="profile-name">Confirm New Password</label>
 								<div class="controls">
-									<input type="text" class="input-large" value id="profile-confirm">
+									<input type="password" class="input-large" value id="profile-confirm">
 								</div>
 							</div>
 							<div class="control-group">
@@ -178,9 +183,15 @@
 								</div>
 							</div>
 							<div class="control-group">
-								<label class="control-label" for="meeting-startdate">Start Date</label>
+								<label class="control-label" for="meeting-date">Start Date</label>
 								<div class="controls">
-									<input type="text" class="input-large" value placeholder="yyyy-mm-dd" id="meeting-startdate">
+									<input type="text" class="input-large" value placeholder="mm/dd/yyyy" id="meeting-date">
+								</div>
+							</div>
+							<div class="control-group">
+								<label class="control-label" for="meeting-time">Start Time</label>
+								<div class="controls">
+									<input type="text" class="input-large" value placeholder="HH:MM" id="meeting-time">
 								</div>
 							</div>
 							<div class="control-group">
@@ -270,7 +281,9 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
+	<script src="/js/jquery.timepicker.js"></script>
 	<script src="/js/jquery.cookie.js"></script>
+	<script src="/js/jquery.autosize-min.js"></script>
 	<script src="/js/md5.js"></script>
 	<script src="/js/custom_checkbox_and_radio.js"></script>
 	<script src="/js/mr-api-client.js"></script>
