Added sub items and "Create Next" meeting button

--- a/www/index.html
+++ b/www/index.html
@@ -132,8 +132,7 @@
 									<th>Status</th>
 									<th>Attendees</th>
 									<th>Frequency</th>
-									<th></th>
-									<th></th>
+									<th class="cell-medium"></th>
 								</tr>
 							</thead>
 							<tbody></tbody>
