Bug fixes and updates

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,9 @@
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
+
+		<link href="/meetingrainbow-32x32.ico" rel="icon" type="ico">
+		<link href="/meetingrainbow-16x16.ico" rel="icon" type="ico">
 	</head>
 	<body>
 		<div class="container-fluid">
