- Add profile support

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
 									<li ng-hide="loggedIn()" ng-class="{ active: isActive('/login') }"><a href="#/login">Log in</a></li>
 									<li ng-show="loggedIn()" ng-class="{ active: isActive('/list') }"><a  href="#/list">List Meetings</a></li>
 									<li ng-show="loggedIn()" ng-class="{ active: isActive('/new') }"><a href="#/new">New Meeting</a></li>
+									<li ng-show="loggedIn()" ng-class="{ active: isActive('/profile') }"><a href="#/profile">Profile</a></li>
 									<li ng-show="loggedIn()" ng-class="{ active: isActive('/logout') }"><a href="#/logout">Log out</a></li>
 								</ul>
 							</div>
